--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,6 +36,10 @@
 
           <div class="collapse navbar-collapse text-right" id="navbarNav">
             <ul class="navbar-nav ml-auto flex-nowrap">
+            <!-- CV Link -->
+            <li class="nav-item">
+              <a class="nav-link" href="{{ site.baseurl }}/https://www.dropbox.com/scl/fi/baydir1lr6sxo8710neay/ARE4476_Syllabus_fall23.pdf?rlkey=sdderjw9ui4brcj0l49oywdxk&dl=0" target="_blank">CV</a>
+            </li>
 
               {%- for page in site.pages -%}
                 {% if page.permalink == '/' %}
