--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,7 +38,7 @@
             <ul class="navbar-nav ml-auto flex-nowrap">
             <!-- CV Link -->
             <li class="nav-item">
-              <a class="nav-link" href="{{ site.baseurl }}/https://www.dropbox.com/scl/fi/baydir1lr6sxo8710neay/ARE4476_Syllabus_fall23.pdf?rlkey=sdderjw9ui4brcj0l49oywdxk&dl=0" target="_blank">CV</a>
+              <a class="nav-link" href="{{ site.baseurl }}/https://www.dropbox.com>CV</a>
             </li>
 
               {%- for page in site.pages -%}
@@ -55,8 +55,7 @@
                   {%- endif -%}
                 </a>
               </li>
-              {% if site.blog_nav_title %}
-              <!-- Blog -->
+
 
               <!-- Other pages -->
               {%- assign sorted_pages = site.pages | sort: "nav_order" -%}
