--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,8 +36,6 @@
 
           <div class="collapse navbar-collapse text-right" id="navbarNav">
             <ul class="navbar-nav ml-auto flex-nowrap">
-
-
               {%- for page in site.pages -%}
                 {% if page.permalink == '/' %}
                   {% assign about_title = page.title %}
@@ -53,10 +51,9 @@
                 </a>
               </li>
 
-            
               <!-- CV Link -->
               <li class="nav-item">
-                <a class="nav-link" href="{{ site.baseurl }}/https://www.dropbox.com>CV</a>
+                <a class="nav-link" href="https://www.google.com">CV</a>
               </li>
 
               <!-- Other pages -->
