--- a/_includes/header.html
+++ b/_includes/header.html
@@ -53,7 +53,7 @@
 
               <!-- CV Link -->
               <li class="nav-item">
-                <a class="nav-link" href="https://www.google.com">CV</a>
+                <a class="nav-link" href="https://www.dropbox.com/scl/fi/baydir1lr6sxo8710neay/ARE4476_Syllabus_fall23.pdf?rlkey=sdderjw9ui4brcj0l49oywdxk&dl=0">CV</a>
               </li>
 
               <!-- Other pages -->
