--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,4 +35,7 @@
     <link rel="stylesheet" href="{{ '/assets/css/jekyll-pygments-themes-native.css' | relative_url | bust_file_cache }}" media="none" id="highlight_theme_dark" />
     <script src="{{ '/assets/js/theme.js' | relative_url | bust_file_cache }}"></script>
     <script src="{{ '/assets/js/dark_mode.js' | relative_url | bust_file_cache }}"></script>
+
+    {% if site.google_analytics and jekyll.environment == 'production' %}
+    {% include analytics.html %}    
     {% endif %}
