--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,9 @@ layout: default
 <div class="post">
 
   <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
+    {% if page.title != null and page.title != "" %}
+      <h1 class="post-title">{{ page.title }}</h1>
+    {% endif %}
     <p class="post-description">{{ page.description }}</p>
   </header>
 
