--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,11 +5,12 @@ layout: default
 <div class="post">
 
   <header class="post-header">
-    {% if page.title == "" %}
+    {% if page.title != "" %}
       <h1 class="post-title">{{ page.title }}</h1>
     {% endif %}
     <p class="post-description">{{ page.description }}</p>
   </header>
+  
 
   <article>
     {{ content }}
