--- a/_includes/header.html
+++ b/_includes/header.html
@@ -53,7 +53,7 @@
 
               <!-- CV Link -->
               <li class="nav-item">
-                <a class="nav-link" href="https://drive.google.com/file/d/1tlwb4Nmlmr1O1DICTFOEHDh9djmChIgC/view?usp=sharing">CV</a>
+                <a class="nav-link" href="https://drive.google.com/file/d/1tlwb4Nmlmr1O1DICTFOEHDh9djmChIgC/view?usp=drive_link">CV</a>
               </li>
               
               <!-- Other pages -->
